# clangir

clang/include/clang/CIR/Dialect/IR/: CIROps.td  MLIRCIRAttrs.td  MLIRCIRTypes.td
mlir/tools/mlir-tblgen/: CMakeLists.txt  VespaAttrDeserializerGen.cpp  VespaAttrGen.cpp  VespaCommon.cpp  VespaCommon.h  VespaEnumGen.cpp  VespaEnumsDeserializerGen.cpp  VespaGen.cpp  VespaGen.h  VespaOpDeserializerGen.cpp  VespaOpGen.cpp  VespaTypeGen.cpp
